tests/neg-macros/annot-mod-class-add-top-method/Test_2.scala
@addTopLevelMethod // error
class Foo

@addTopLevelMethod // error
object Foo
